Adds log.